--- a/LMS System/Views/Activities/CreateUpload.cshtml
+++ b/LMS System/Views/Activities/CreateUpload.cshtml
@@ -26,7 +26,7 @@
         }
 
         <div id="hidden">
-            @Html.Hidden("parentId", parentId);
+            @Html.Hidden("parentId", parentId)
         </div>
     <div class="form-group">
         @if(act[0].Assignment)
