--- a/LMS System/Views/Activities/IndexFiles.cshtml
+++ b/LMS System/Views/Activities/IndexFiles.cshtml
@@ -46,7 +46,7 @@
         <td>
             @{
             <div>
-              @Html.ActionLink(@item.Name, "Download", new { FilePath = @item.FilePath, Name =@item.Name });
+              @Html.ActionLink(@item.Name, "Download", new { FilePath = @item.FilePath, Name =@item.Name })
             </div>
             }
            
