--- a/LMS System/Views/Courses/CreateUpload.cshtml
+++ b/LMS System/Views/Courses/CreateUpload.cshtml
@@ -26,7 +26,7 @@
         }
 
         <div id="hidden">
-            @Html.Hidden("parentId", parentId);
+            @Html.Hidden("parentId", parentId)
         </div>
 
         <input type="file" name="file" /><br />
