--- a/LMS System/Views/Shared/_Layout.cshtml
+++ b/LMS System/Views/Shared/_Layout.cshtml
@@ -35,8 +35,8 @@
                         {
                             if (ViewContext.RouteData.Values["id"] != null)
                             {
-                            <li>@Html.ActionLink("Home", "Details", "Courses")</li>
-                        }
+                            <li>@Html.ActionLink("Homer", "Details", "Courses", new { id = ViewContext.RouteData.Values["id"] }, null)</li>
+                            }
                         }
                         
                     </ul>
