--- a/LMS System/Views/Courses/Details.cshtml
+++ b/LMS System/Views/Courses/Details.cshtml
@@ -147,12 +147,12 @@ else
                                 @Html.ActionLink("Edit", "Edit", "Modules", new { id = module.Id, courseID = Model.Id }, null) |
                                 @Html.ActionLink("Delete", "Delete", "Modules", new { id = module.Id, courseID = Model.Id }, null)
                             </td>
-                    @*@if (Model.StartDate > module.StartDate || Model.EndDate < module.EndDate || module.StartDate > module.EndDate)
-                            {
-                                <td>
-                                    Some dates are out of bounds!
-                                </td>
-                    }*@
+                            @if (Model.StartDate > module.StartDate || Model.EndDate < module.EndDate || module.StartDate > module.EndDate)
+                                    {
+                                        <td>
+                                            Some dates are out of bounds!
+                                        </td>
+                            }
                         </tr>
                     }
 
