--- a/LMS System/Content/CourseDetails.css
+++ b/LMS System/Content/CourseDetails.css
@@ -14,6 +14,13 @@ table.lms tr:nth-child(even) {
     background-color: aliceblue;
 }
 
+/*table.lms th:last-child a {
+    text-decoration:none;
+    cursor: default;
+    pointer-events:none;
+}*/
+
+
 h3 {
 
     padding : initial;
