--- a/LMS System/Views/Shared/_Layout.cshtml
+++ b/LMS System/Views/Shared/_Layout.cshtml
@@ -29,13 +29,13 @@
                         {
                            
                             <li> @Html.ActionLink("Home", "Index", "Courses")</li>
-                            <li>@Html.ActionLink("User Manager", "Index", "Appusers")</li>
+                            @*<li>@Html.ActionLink("User Manager", "Index", "Appusers")</li>*@
                         }
                         else
                         {
                             if (ViewContext.RouteData.Values["id"] != null)
                             {
-                            <li>@Html.ActionLink("Homer", "Details", "Courses", new { id = ViewContext.RouteData.Values["id"] }, null)</li>
+                            <li>@Html.ActionLink("Home", "Details", "Courses", new { id = ViewContext.RouteData.Values["id"] }, null)</li>
                             }
                         }
                         
