--- a/LMS System/Views/AppUsers/Delete.cshtml
+++ b/LMS System/Views/AppUsers/Delete.cshtml
@@ -50,7 +50,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to registration", "RegisterTeacher", "Account",null, null)
+            @Html.ActionLink("Back to registration", "CourseTeacherView", "Account", new { id = ViewBag.CourseId, orderBy = "firstname" }, null)
         </div>
     }
 </div>
