--- a/LMS System/Views/Courses/Details.cshtml
+++ b/LMS System/Views/Courses/Details.cshtml
@@ -1,5 +1,8 @@
-﻿@model LMS_System.Models.Course
+﻿@model LMS_System.Models.Course         
+    
+                                                                              @*Moddelen inskickad av kontrollern course med action Details*@ 
 
+                                            
 @{
     ViewBag.Title = "Course Details";
 }
@@ -10,7 +13,8 @@
 <br />
 
 @if (User.IsInRole("teacher"))
-{
+                                                                               //Visas bara för en inloggad lärare
+            {
 <div class="control">
     
     <a href="@Url.Action("Create", "Modules" , new { id=Model.Id })" class="btn btn-default"><span class="glyphicon glyphicon-align-justify"></span> Add module</a>
@@ -20,11 +24,20 @@
 
 
 
+                                                                              @*Tre knappar “Add module” , “Add student” , “Show Schedule” , och tre actions :
+
+                                                                                1.	“Create” I Controllern “Module” anropas när man klickar på knappen “Add module”
+
+                                                                                2.	”Schedule” i Controllern ”Course” anropas när man kickar på knappen ”Show Schedule”
+
+                                                                                3.	”IndexFiles” i COntrollen ”Course” anropas när man klickar på knappen ”Upload or view files”*@
+
 
 </div>
-}
-else
-{
+        }
+        else
+                                                                              //Visas bara för en inloggad student
+        {
     <div class="control">
         <a href="@Url.Action("CourseTeacherView", "Account", new { id = Model.Id, orderBy = "firstname" })" class="btn btn-default"><span class="glyphicon glyphicon-user"></span> Show student</a>
         <a href="@Url.Action("Schedule", "Courses", new { id = Model.Id })" class="btn btn-default"><span class="glyphicon glyphicon-th-list"></span> Show Schedule</a>
